--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -30,15 +30,27 @@ jobs:
           rm -rf ios/Pods ios/Podfile.lock ios/.symlinks
           rm -rf ~/Library/Developer/Xcode/DerivedData/*
 
-      # 🔑 安装依赖并生成最新 lockfile
       - name: Install Flutter dependencies
         run: flutter pub get
 
-      # 🔑 强制 iOS Deployment Target 统一到 13.0
+      # 🔑 修改 Runner.xcodeproj 部署版本
+      - name: Force Runner project to iOS 13.0
+        run: |
+          cd ios
+          sudo gem install xcodeproj --no-document
+          ruby -e '
+            require "xcodeproj"
+            project = Xcodeproj::Project.open("Runner.xcodeproj")
+            project.build_configurations.each { |c| c.build_settings["IPHONEOS_DEPLOYMENT_TARGET"] = "13.0" }
+            project.targets.each { |t| t.build_configurations.each { |c| c.build_settings["IPHONEOS_DEPLOYMENT_TARGET"] = "13.0" } }
+            project.save
+            puts "✅ Runner.xcodeproj updated to iOS 13.0"
+          '
+
+      # 🔑 Pods 强制到 iOS 13.0
       - name: Force iOS 13.0 for all Pods
         run: |
           cd ios
-          # 确保 Podfile 设置为 iOS 13.0
           if ! grep -q "platform :ios" Podfile; then
             echo "platform :ios, '13.0'" > Podfile.tmp
             cat Podfile >> Podfile.tmp
@@ -46,13 +58,13 @@ jobs:
           fi
           sed -i '' "s/platform :ios, *'[^']*'/platform :ios, '13.0'/" Podfile
 
-          # 批量修正 podspec 里的低版本
           find Pods -name '*.podspec.json' -o -name '*.podspec' | while read spec; do
             sed -i '' 's/ios.*9.0/ios, "13.0"/g' "$spec" || true
             sed -i '' 's/ios.*10.0/ios, "13.0"/g' "$spec" || true
             sed -i '' 's/ios.*11.0/ios, "13.0"/g' "$spec" || true
             sed -i '' 's/ios.*12.0/ios, "13.0"/g' "$spec" || true
           done
+
           pod install --repo-update
 
       - name: Build iOS (unsigned)
